--- a/CountOnMe/View/Base.lproj/Main.storyboard
+++ b/CountOnMe/View/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                 <rect key="frame" x="5" y="188" width="380" height="390"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="U2a-5D-kgc">
-                                        <rect key="frame" x="0.0" y="0.0" width="118.66666666666667" height="278.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="118.66666666666667" height="375"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Raa-av-x4n">
                                                 <rect key="frame" x="0.0" y="0.0" width="118.66666666666667" height="86.333333333333329"/>
@@ -59,9 +59,22 @@
                                                     <action selector="tappedNumberButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="Ovc-Qq-WYV"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eFV-RR-sn6">
+                                                <rect key="frame" x="0.0" y="288.66666666666669" width="118.66666666666667" height="86.333333333333314"/>
+                                                <color key="backgroundColor" red="0.60392159219999997" green="0.57647061349999995" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="AC">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="tappedAllClearButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="cwC-CR-fk0"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <constraints>
                                             <constraint firstItem="W04-n1-Wen" firstAttribute="width" secondItem="Raa-av-x4n" secondAttribute="width" id="GTQ-Xy-Voe"/>
+                                            <constraint firstItem="eFV-RR-sn6" firstAttribute="height" secondItem="Raa-av-x4n" secondAttribute="height" id="ci8-ib-sUZ"/>
+                                            <constraint firstItem="eFV-RR-sn6" firstAttribute="width" secondItem="Raa-av-x4n" secondAttribute="width" id="i0a-LF-pvJ"/>
                                             <constraint firstItem="tMJ-tH-k5u" firstAttribute="width" secondItem="Raa-av-x4n" secondAttribute="width" id="pau-0i-GlT"/>
                                             <constraint firstItem="tMJ-tH-k5u" firstAttribute="height" secondItem="Raa-av-x4n" secondAttribute="height" id="rdw-j8-SW9"/>
                                             <constraint firstItem="W04-n1-Wen" firstAttribute="height" secondItem="Raa-av-x4n" secondAttribute="height" id="zj5-qb-RYx"/>
@@ -117,7 +130,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WCv-mh-kCr">
-                                        <rect key="frame" x="261.33333333333331" y="0.0" width="118.66666666666669" height="278.66666666666669"/>
+                                        <rect key="frame" x="261.33333333333331" y="0.0" width="118.66666666666669" height="375"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UDN-zf-T0y">
                                                 <rect key="frame" x="0.0" y="0.0" width="118.66666666666667" height="86.333333333333329"/>
@@ -152,7 +165,22 @@
                                                     <action selector="tappedNumberButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="VhO-EH-3DB"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLi-g4-l6b">
+                                                <rect key="frame" x="0.0" y="288.66666666666669" width="118.66666666666667" height="86.333333333333314"/>
+                                                <color key="backgroundColor" red="0.60392159219999997" green="0.57647061349999995" blue="0.56862747670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="C">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="tappedClearLastEntryButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="Bsc-Qg-OEX"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="bLi-g4-l6b" firstAttribute="width" secondItem="UDN-zf-T0y" secondAttribute="width" id="2Iu-gu-NfG"/>
+                                            <constraint firstItem="bLi-g4-l6b" firstAttribute="height" secondItem="UDN-zf-T0y" secondAttribute="height" id="jcm-rt-6Fm"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
@@ -256,7 +284,7 @@
                                     <action selector="tappedEqualButton:" destination="eqK-jh-KKu" eventType="touchUpInside" id="JgS-cl-T2a"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="1+1=2" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="T2H-yn-nBB">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="T2H-yn-nBB">
                                 <rect key="frame" x="5" y="49" width="380" height="134"/>
                                 <color key="backgroundColor" red="0.24527746819999999" green="0.53481305040000005" blue="0.58749136739999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
